Add manifest_version to manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "manifest_version": 1,
   "name": "HP Bar Plugin",
   "version": "1.0.0",
   "entry": "https://gabrielbohrerdora-collab.github.io/hp-plugin-owlbear/index.html",
