--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,10 @@
   "action": {
     "title": "HP Bar",
     "icon": "icon.png",
-    "type": "open_page",
-    "url": "index.html"
+    "popover": {
+      "url": "index.html",
+      "width": 300,
+      "height": 200
+    }
   }
 }
